Update icons to fix sizing and overflow issues
Re-exported icon-control.svg and icon-replace.svg to
resolve issues around sizing and overflow. These new icons
will allow us to remove CSS 'hacks' in place to prevent
unexpected focus state overflows and allow icon resizing
by changing the width on the icon class name. Small scss
updates were included to account for this fix.

--- a/app/common/styles/directives/app-navigation.scss
+++ b/app/common/styles/directives/app-navigation.scss
@@ -12,7 +12,6 @@ $nav__second-level-text-color: $base-02--01;
   stroke-width: .5;
   display: block;
   margin: .5em auto;
-  overflow: hidden;
   .st0 {
     fill: none;
     stroke: $primary-light;
@@ -60,6 +59,12 @@ $nav__second-level-text-color: $base-02--01;
     svg {
       width: 36px;
       height: auto;
+    }
+  }
+  .nav-icon__control {
+    margin-bottom: 1em;
+    svg {
+      width: 30px;
     }
   }
   .button, button, a {
